Time: 3 ms (91.05%), Space: 48.4 MB (46.60%) - LeetHub